[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Enemy0.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Enemys/f-35.png" type="Texture" id=2]
[ext_resource path="res://Scenes/HealthBarEnemy.tscn" type="PackedScene" id=3]

[sub_resource type="ConvexPolygonShape2D" id=1]
points = PoolVector2Array( 0, 0, 0, 48.54, -10.73, 22.72, -33.03, -13.46, -32.88, -23.08, -21.12, -46.59, 0, -48.82, 21.9, -46.25, 31.9, -22.3, 32.09, -12.94, 10.1, 23.51, 0, 48.49 )

[sub_resource type="Gradient" id=2]

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="Curve" id=4]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=5]
curve = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
flag_disable_z = true
gravity = Vector3( 0, 20, 0 )
initial_velocity = 1.0
angular_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale_curve = SubResource( 5 )
color_ramp = SubResource( 3 )

[node name="Enemy0" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
flip_v = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Visible" type="VisibilityNotifier2D" parent="."]

[node name="EnemyPos" type="Position2D" parent="."]

[node name="HealthBarEnemy" parent="." instance=ExtResource( 3 )]
margin_left = -20.182
margin_top = -33.8799
margin_right = -20.182
margin_bottom = -33.8799
rect_scale = Vector2( 0.1, 0.1 )

[node name="Trail" type="Particles2D" parent="."]
visible = false
show_behind_parent = true
rotation = -3.14159
scale = Vector2( 0.5, 0.5 )
amount = 10
speed_scale = 2.0
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="DeathPos" type="Position2D" parent="."]
position = Vector2( 0, 14.76 )

[node name="Trigger" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Trigger"]
shape = SubResource( 1 )
[connection signal="screen_exited" from="Visible" to="." method="_on_Visible_screen_exited"]
[connection signal="death" from="HealthBarEnemy" to="." method="_on_HealthBarEnemy_death"]
[connection signal="area_entered" from="Trigger" to="." method="_on_Trigger_area_entered"]
